# src/main/resources/static/api.yml
@@ -2799,6 +2799,11 @@ paths:
           description: Page number of results to return. If not provided results will not be paged
           schema:
             type: integer
+        - name: perPage
+          in: query
+          description: Number of items to return per page (defaults to 10)
+          schema:
+            type: integer
         - name: sortBy
           in: query
           required: false
